--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "dependencies": {
     "@prisma/client": "^5.14.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "express": "^4.19.2",
+    "googleapis": "^139.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.14.0",
     "uuid": "^9.0.1"
   },
@@ -19,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
