--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node --watch dist/server.js"
+    "start": "node --watch dist/server.js",
+    "auto" : "node --watch dist/cronjobs/verificationValideVacine.js"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
