--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node --watch dist/server.js",
-    "auto" : "node --watch dist/cronjobs/verificationValideVacine.js"
+    "auto": "node --watch dist/cronjobs/verificationValideVacine.js"
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.0",
     "prisma": "^5.14.0",
     "uuid": "^9.0.1"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20.14.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
+    "@types/pdfkit": "^0.13.4",
     "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2"
   }
